--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workout-tracker-v2",
+  "name": "crosstraining-innova",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.8.0",
+    "firebase": "^8.2.7",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
