--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "crosstraining-innova",
+  "name": "crosstraining",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "date-fns": "^2.17.0",
     "firebase": "^8.2.7",
-    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-id-generator": "^3.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
+  },
+  "engines": {
+    "node": "^15.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
